--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,6 +3,7 @@
   padding: 40px 0;
 }
 .card-container {
+  padding-top: 10px;
   padding-bottom: 40px;
   row-gap: 32px;
   display: grid;
@@ -12,5 +13,11 @@
     position: absolute;
     width: 100%;
     bottom: 0;
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  .container {
+    width: 100%;
   }
 }
